<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.blues.musicalstructure.DetailActivity">

        <TextView
            style="@style/explain_textView"
            android:text="@string/content_detail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/albums_btn"
                style="@style/normal_btn"
                android:text="@string/albums" />

            <Button
                android:id="@+id/artists_btn"
                style="@style/normal_btn"
                android:text="@string/artists" />

            <Button
                android:id="@+id/add_to_playlist_btn"
                style="@style/normal_btn"
                android:text="@string/add_to_palylist" />

            <Button
                android:id="@+id/playist_btn"
                style="@style/normal_btn"
                android:text="@string/playlist" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
